[metadata]
name = wanshi
version = 0.1.0
description = A stand-alone util repo
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KatherLab/wanshi-utils
project_urls =
    Bug Tracker = https://github.com/KatherLab/wanshi-utils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    matplotlib~=3.6
    numpy~=1.24
    openpyxl~=3.0
    pandas~=1.4
    scipy~=1.10
    scikit-learn~=1.2
    tqdm~=4.64
    pytest
